--- a/debug/test/pom.xml
+++ b/debug/test/pom.xml
@@ -5,19 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.apache.shardingsphere</groupId>
-        <artifactId>shardingsphere</artifactId>
+        <artifactId>debug</artifactId>
         <version>5.5.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>debug</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>encipher</module>
-        <module>sharding</module>
-        <module>parser</module>
-        <module>shadow</module>
-        <module>test</module>
-    </modules>
+    <artifactId>test</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -25,11 +17,4 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.shardingsphere</groupId>
-            <artifactId>shardingsphere-jdbc</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-    </dependencies>
 </project>
