--- a/parser/sql/dialect/oracle/pom.xml
+++ b/parser/sql/dialect/oracle/pom.xml
@@ -36,5 +36,10 @@
             <artifactId>shardingsphere-infra-database-oracle</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>2.0.12</version>
+        </dependency>
     </dependencies>
 </project>
